force-app/main/default/objects/Builld_Encounter__c/Builld_Encounter__c.object-meta.xml
<CustomObject>
    <label>Billed Encounter</label>
    <nameField>
        <label>Builld Encounter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billed Encounters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>