force-app/main/default/objects/Builld_Encounter__c/fields/EMR__c.field-meta.xml
<CustomField>
    <fullName>EMR__c</fullName>
    <label>EMR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Thoroughcare</fullName>
            </value>
            <value>
                <fullName>Gherimed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>