force-app/main/default/objects/Builld_Encounter__c/fields/Facility__c.field-meta.xml
<CustomField>
    <fullName>Facility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facility</label>
    <referenceTo>Facility__c</referenceTo>
    <relationshipLabel>Billed Encounters</relationshipLabel>
    <relationshipName>Billed_Encounters</relationshipName>
    <type>Lookup</type>
</CustomField>