force-app/main/default/objects/Builld_Encounter__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <label>Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CCM</fullName>
            </value>
            <value>
                <fullName>BHI</fullName>
            </value>
            <value>
                <fullName>After Hours Telehealth Consult</fullName>
            </value>
            <value>
                <fullName>TCM</fullName>
            </value>
            <value>
                <fullName>Telehealth Follow Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>