force-app/main/default/objects/Builld_Encounter__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Encounter_ID__c</columns>
    <columns>EMR__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>